# Course-Study-6

./: .env  .env.sample  README.md  db.sqlite3  manage.py  pyproject.toml  update_templates.py
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
course_study_6/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: groups.json
mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  tasks.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingattempt_status.py  0003_remove_mailing_is_active_and_more.py
mailing/templates/: base.html
mailing/templates/mailing/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_attempt_detail.html  mailing_attempt_stats.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_log_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  statistics.html
mailing/templates/registration/: login.html  signup.html
users/: models.py
users/migrations/: 0001_initial.py
