[tool.poetry]
name = "course study 6"
version = "0.1.0"
description = ""
authors = ["Alexey Bedrinsky <bedrinsky@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.2"
django-apscheduler = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
